# siliconforge

./: .gitignore  00_IR_DROP_PDN_INDEX.txt  CMakeLists.txt  DETAILED_FILE_INVENTORY.md  DRC_ANALYSIS_INDEX.md  DRC_QUICK_REFERENCE.txt  EXECUTIVE_SUMMARY.txt  IR_DROP_PDN_RESEARCH.md  app.py  conversation.txt  output_v100_final.gds  rtl_out.html  sf_final_layout.gds  sf_output.gds  sim_out.html  test_design.v  test_script.tcl  test_signoff.tcl  test_state.json  test_ui.py  web_state.json  web_state_test.json
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
docs/: ANSWER_TO_YOUR_REQUEST.txt  AUDIT_FILES_GENERATED.txt  DEEP_ANALYSIS.md  DRC_MISSING_RULES_SUMMARY.txt  DRC_SUBSYSTEM_ANALYSIS.txt  FULL_FILE_CONTENTS.md  GAP_REPORT_2026.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  INDEX.txt  INVENTORY_DELIVERY_CHECKLIST.txt  IR_DROP_PDN_QUICK_REFERENCE.txt  QUICK_INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  README.md  README_ANALYSIS.txt  README_INVENTORY.md  README_TIER1_ANALYSIS.md  RESEARCH_SUMMARY.txt  SILICONFORGE_ANALYSIS.md  SILICONFORGE_ANALYSIS_SUMMARY.txt  SILICONFORGE_COMPLETE_ANALYSIS.txt  SUMMARY.txt  SiliconForge_Complete_Inventory.md  SiliconForge_QUICK_SUMMARY.txt  SiliconForge_QuickRef.json  TIER1_ANALYSIS_EXECUTIVE_SUMMARY.txt  TIER1_GAP_ANALYSIS.md  TIER1_QUICK_REFERENCE.md  siliconforge_analysis.md  summary.txt
examples/: t.tcl
output/: api_response.json  out.gds  out_all_behavioral.gds  output_v100.gds  sf_final_layout.gds  siliconforge.html  test_out.html  test_out.json
src/: CMakeLists.txt  main.cpp
src/core/: aig.cpp  aig.hpp  def_parser.cpp  def_parser.hpp  design_db.cpp  design_db.hpp  die_to_die.cpp  die_to_die.hpp  hierarchy.cpp  hierarchy.hpp  lef_parser.cpp  lef_parser.hpp  lef_writer.cpp  liberty_cache.cpp  liberty_cache.hpp  liberty_parser.cpp  liberty_parser.hpp  name_pool.cpp  name_pool.hpp  netlist.cpp  netlist.hpp  parasitic_extract.cpp  parasitic_extract.hpp  report_gen.cpp  report_gen.hpp  spef_parser.cpp  spef_parser.hpp  thread_pool.hpp  types.hpp
src/dft/: fault_sim.cpp  fault_sim.hpp  jtag_bist.cpp  jtag_bist.hpp  podem.cpp  podem.hpp  scan_compress.cpp  scan_compress.hpp  scan_insert.cpp  scan_insert.hpp
src/flow/: engine.cpp  engine.hpp
src/formal/: advanced_formal.cpp  advanced_formal.hpp  bmc.cpp  bmc.hpp  equiv_checker.cpp  equiv_checker.hpp  k_induction.cpp  k_induction.hpp  lec.cpp  lec.hpp  sva_engine.cpp  sva_engine.hpp  tseitin.cpp  tseitin.hpp
src/frontend/: sdc_parser.cpp  sdc_parser.hpp  sv_elaborate.cpp  sv_elaborate.hpp  sv_parser.cpp  sv_parser.hpp  sva_parser.cpp  sva_parser.hpp  upf_parser.cpp  upf_parser.hpp  verilog_parser.cpp  verilog_parser.hpp  vhdl_parser.cpp  vhdl_parser.hpp
src/hls/: c_parser.cpp  c_parser.hpp
src/lint/: lint_engine.cpp  lint_engine.hpp
src/macro/: memory_compiler.cpp  memory_compiler.hpp
src/ml/: congestion_model.cpp  congestion_model.hpp  gnn.cpp  gnn.hpp  ml_opt.cpp  ml_opt.hpp  timing_model.cpp  timing_model.hpp
src/pnr/: ai_tuner.cpp  ai_tuner.hpp  cell_insert.cpp  cell_insert.hpp  chip_assembler.cpp  chip_assembler.hpp  cts.cpp  cts.hpp  detailed_placer.cpp  detailed_placer.hpp  detailed_router.cpp  detailed_router.hpp  detailed_router_v2.cpp  detailed_router_v2.hpp  distributed_route.cpp  distributed_route.hpp  floorplan.cpp  floorplan.hpp  gdsii_reader.cpp  gdsii_reader.hpp  gdsii_writer.cpp  gdsii_writer.hpp  global_router.cpp  global_router.hpp  gpu_density.hpp  metal_fill.cpp  metal_fill.hpp  multi_pattern.cpp  multi_pattern.hpp  oasis_writer.cpp  oasis_writer.hpp  physical.cpp  physical.hpp  placer.cpp  placer.hpp  post_route_opt.cpp  post_route_opt.hpp  power_plan.cpp  power_plan.hpp  spectral_density.hpp  (+4 more)
src/sat/: cdcl_solver.cpp  cdcl_solver.hpp  cnf.hpp  solver.hpp
src/shell/: sf_shell.cpp  sf_shell.hpp  tcl_interp.cpp  tcl_interp.hpp
src/sim/: simulator.cpp  simulator.hpp
src/spice/: device_models.hpp  spice_engine.cpp  spice_engine.hpp  spice_parser.cpp  spice_parser.hpp
src/stdcell/: cell_drc.cpp  cell_drc.hpp  cell_layout.cpp  cell_layout.hpp  cell_lvs.cpp  cell_lvs.hpp  characterizer.cpp  characterizer.hpp  layout_rules.hpp
src/synth/: aig_opt.cpp  aig_opt.hpp  behavioral_synth.cpp  behavioral_synth.hpp  clock_gating.cpp  clock_gating.hpp  datapath.cpp  datapath.hpp  eco.cpp  eco.hpp  fsm_extract.cpp  fsm_extract.hpp  multi_vt.cpp  multi_vt.hpp  multibit.cpp  multibit.hpp  npn_match.cpp  npn_match.hpp  resource_share.cpp  resource_share.hpp  retiming.cpp  retiming.hpp  tech_mapper.cpp  tech_mapper.hpp
src/timing/: ccs_delay.cpp  ccs_delay.hpp  electromigration.cpp  electromigration.hpp  ir_drop.cpp  ir_drop.hpp  mcmm.cpp  mcmm.hpp  noise.cpp  noise.hpp  parasitics.cpp  parasitics.hpp  pdn.cpp  pdn.hpp  power.cpp  power.hpp  sdf_writer.cpp  sdf_writer.hpp  signal_integrity.cpp  signal_integrity.hpp  ssta.cpp  ssta.hpp  sta.cpp  sta.hpp  thermal.cpp  thermal.hpp
src/verify/: antenna.cpp  antenna.hpp  cdc.cpp  cdc.hpp  drc.cpp  drc.hpp  erc.cpp  erc.hpp  esd.cpp  esd.hpp  latchup.cpp  latchup.hpp  lvs.cpp  lvs.hpp  opc.cpp  opc.hpp  rdc.cpp  rdc.hpp  reliability.cpp  reliability.hpp
src/viz/: dashboard.cpp  dashboard.hpp  html_export.cpp  html_export.hpp  logic_viz.cpp  logic_viz.hpp  rtl_viz.cpp  rtl_viz.hpp  sim_viz.cpp  sim_viz.hpp
studio/: index.html  test_fsm.v  (+42 more)
tests/: CMakeLists.txt  test_phase1.cpp  test_phase10.cpp  test_phase11.cpp  test_phase12.cpp  test_phase13.cpp  test_phase14.cpp  test_phase15.cpp  test_phase16.cpp  test_phase17.cpp  test_phase18.cpp  test_phase19.cpp  test_phase2.cpp  test_phase20.cpp  test_phase21.cpp  test_phase22.cpp  test_phase23.cpp  test_phase24.cpp  test_phase25.cpp  test_phase26.cpp  test_phase27.cpp  test_phase28.cpp  test_phase29.cpp  test_phase3.cpp  test_phase30.cpp  test_phase31.cpp  test_phase32.cpp  test_phase33.cpp  test_phase34.cpp  test_phase35.cpp  test_phase36.cpp  test_phase37.cpp  test_phase38.cpp  test_phase39.cpp  test_phase4.cpp  test_phase40.cpp  test_phase41.cpp  test_phase42.cpp  test_phase43.cpp  test_phase44.cpp  (+59 more)
(+8 files in other folders)
