add_executable(test_phase1 test_phase1.cpp)
target_link_libraries(test_phase1 PRIVATE siliconforge_lib)
add_test(NAME Phase1Tests COMMAND test_phase1)

add_executable(test_phase2 test_phase2.cpp)
target_link_libraries(test_phase2 PRIVATE siliconforge_lib)
add_test(NAME Phase2Tests COMMAND test_phase2)

add_executable(test_phase3 test_phase3.cpp)
target_link_libraries(test_phase3 PRIVATE siliconforge_lib)
add_test(NAME Phase3Tests COMMAND test_phase3)

add_executable(test_phase4 test_phase4.cpp)
target_link_libraries(test_phase4 PRIVATE siliconforge_lib)
add_test(NAME Phase4Tests COMMAND test_phase4)

add_executable(test_phase5 test_phase5.cpp)
target_link_libraries(test_phase5 PRIVATE siliconforge_lib)
add_test(NAME Phase5Tests COMMAND test_phase5)

add_executable(test_phase6 test_phase6.cpp)
target_link_libraries(test_phase6 PRIVATE siliconforge_lib)
add_test(NAME Phase6Tests COMMAND test_phase6)

add_executable(test_phase7 test_phase7.cpp)
target_link_libraries(test_phase7 PRIVATE siliconforge_lib)
add_test(NAME Phase7Tests COMMAND test_phase7)

add_executable(test_phase8 test_phase8.cpp)
target_link_libraries(test_phase8 PRIVATE siliconforge_lib)
add_test(NAME Phase8Tests COMMAND test_phase8)

add_executable(test_phase9 test_phase9.cpp)
target_link_libraries(test_phase9 PRIVATE siliconforge_lib)
add_test(NAME Phase9Tests COMMAND test_phase9)

add_executable(test_phase10 test_phase10.cpp)
target_link_libraries(test_phase10 PRIVATE siliconforge_lib)
add_test(NAME Phase10Tests COMMAND test_phase10)

add_executable(test_phase11 test_phase11.cpp)
target_link_libraries(test_phase11 PRIVATE siliconforge_lib)
add_test(NAME Phase11Tests COMMAND test_phase11)

add_executable(test_phase12 test_phase12.cpp)
target_link_libraries(test_phase12 PRIVATE siliconforge_lib)
add_test(NAME Phase12Tests COMMAND test_phase12)

add_executable(test_phase13 test_phase13.cpp)
target_link_libraries(test_phase13 PRIVATE siliconforge_lib)
add_test(NAME Phase13Tests COMMAND test_phase13)

add_executable(test_phase14 test_phase14.cpp)
target_link_libraries(test_phase14 PRIVATE siliconforge_lib)
add_test(NAME Phase14Tests COMMAND test_phase14)
