add_executable(test_phase1 test_phase1.cpp)
target_link_libraries(test_phase1 PRIVATE siliconforge_lib)
add_test(NAME Phase1Tests COMMAND test_phase1)

add_executable(test_phase2 test_phase2.cpp)
target_link_libraries(test_phase2 PRIVATE siliconforge_lib)
add_test(NAME Phase2Tests COMMAND test_phase2)

add_executable(test_phase3 test_phase3.cpp)
target_link_libraries(test_phase3 PRIVATE siliconforge_lib)
add_test(NAME Phase3Tests COMMAND test_phase3)

add_executable(test_phase4 test_phase4.cpp)
target_link_libraries(test_phase4 PRIVATE siliconforge_lib)
add_test(NAME Phase4Tests COMMAND test_phase4)

add_executable(test_phase5 test_phase5.cpp)
target_link_libraries(test_phase5 PRIVATE siliconforge_lib)
add_test(NAME Phase5Tests COMMAND test_phase5)

add_executable(test_phase6 test_phase6.cpp)
target_link_libraries(test_phase6 PRIVATE siliconforge_lib)
add_test(NAME Phase6Tests COMMAND test_phase6)

add_executable(test_phase7 test_phase7.cpp)
target_link_libraries(test_phase7 PRIVATE siliconforge_lib)
add_test(NAME Phase7Tests COMMAND test_phase7)

add_executable(test_phase8 test_phase8.cpp)
target_link_libraries(test_phase8 PRIVATE siliconforge_lib)
add_test(NAME Phase8Tests COMMAND test_phase8)

add_executable(test_phase9 test_phase9.cpp)
target_link_libraries(test_phase9 PRIVATE siliconforge_lib)
add_test(NAME Phase9Tests COMMAND test_phase9)

add_executable(test_phase10 test_phase10.cpp)
target_link_libraries(test_phase10 PRIVATE siliconforge_lib)
add_test(NAME Phase10Tests COMMAND test_phase10)

add_executable(test_phase11 test_phase11.cpp)
target_link_libraries(test_phase11 PRIVATE siliconforge_lib)
add_test(NAME Phase11Tests COMMAND test_phase11)

add_executable(test_phase12 test_phase12.cpp)
target_link_libraries(test_phase12 PRIVATE siliconforge_lib)
add_test(NAME Phase12Tests COMMAND test_phase12)

add_executable(test_phase13 test_phase13.cpp)
target_link_libraries(test_phase13 PRIVATE siliconforge_lib)
add_test(NAME Phase13Tests COMMAND test_phase13)

add_executable(test_phase14 test_phase14.cpp)
target_link_libraries(test_phase14 PRIVATE siliconforge_lib)
add_test(NAME Phase14Tests COMMAND test_phase14)

add_executable(test_phase15 test_phase15.cpp)
target_link_libraries(test_phase15 PRIVATE siliconforge_lib)
add_test(NAME Phase15Tests COMMAND test_phase15)

add_executable(test_phase16 test_phase16.cpp)
target_link_libraries(test_phase16 PRIVATE siliconforge_lib)
add_test(NAME Phase16Tests COMMAND test_phase16)

add_executable(test_phase17 test_phase17.cpp)
target_link_libraries(test_phase17 PRIVATE siliconforge_lib)
add_test(NAME Phase17Tests COMMAND test_phase17)

add_executable(test_phase18 test_phase18.cpp)
target_link_libraries(test_phase18 PRIVATE siliconforge_lib)
add_test(NAME Phase18Tests COMMAND test_phase18)

add_executable(test_phase19 test_phase19.cpp)
target_link_libraries(test_phase19 PRIVATE siliconforge_lib)
add_test(NAME Phase19Tests COMMAND test_phase19)

add_executable(test_phase20 test_phase20.cpp)
target_link_libraries(test_phase20 PRIVATE siliconforge_lib)
add_test(NAME Phase20Tests COMMAND test_phase20)

add_executable(test_phase21 test_phase21.cpp)
target_link_libraries(test_phase21 PRIVATE siliconforge_lib)
add_test(NAME Phase21Tests COMMAND test_phase21)

add_executable(test_phase22 test_phase22.cpp)
target_link_libraries(test_phase22 PRIVATE siliconforge_lib)
add_test(NAME Phase22Tests COMMAND test_phase22)

add_executable(test_phase23 test_phase23.cpp)
target_link_libraries(test_phase23 PRIVATE siliconforge_lib)
add_test(NAME Phase23Tests COMMAND test_phase23)

add_executable(test_phase24 test_phase24.cpp)
target_link_libraries(test_phase24 PRIVATE siliconforge_lib)
add_test(NAME Phase24Tests COMMAND test_phase24)

add_executable(test_phase25 test_phase25.cpp)
target_link_libraries(test_phase25 PRIVATE siliconforge_lib)
add_test(NAME Phase25Tests COMMAND test_phase25)

add_executable(test_phase26 test_phase26.cpp)
target_link_libraries(test_phase26 PRIVATE siliconforge_lib)
add_test(NAME Phase26Tests COMMAND test_phase26)

add_executable(test_phase27 test_phase27.cpp)
target_link_libraries(test_phase27 PRIVATE siliconforge_lib)
add_test(NAME Phase27Tests COMMAND test_phase27)

add_executable(test_phase28 test_phase28.cpp)
target_link_libraries(test_phase28 PRIVATE siliconforge_lib)
add_test(NAME Phase28Tests COMMAND test_phase28)

add_executable(test_phase29 test_phase29.cpp)
target_link_libraries(test_phase29 PRIVATE siliconforge_lib)
add_test(NAME Phase29Tests COMMAND test_phase29)

add_executable(test_phase30 test_phase30.cpp)
target_link_libraries(test_phase30 PRIVATE siliconforge_lib)
add_test(NAME Phase30Tests COMMAND test_phase30)

add_executable(test_phase31 test_phase31.cpp)
target_link_libraries(test_phase31 PRIVATE siliconforge_lib)
add_test(NAME Phase31Tests COMMAND test_phase31)

add_executable(test_phase32 test_phase32.cpp)
target_link_libraries(test_phase32 PRIVATE siliconforge_lib)
add_test(NAME Phase32Tests COMMAND test_phase32)

add_executable(test_phase33 test_phase33.cpp)
target_link_libraries(test_phase33 PRIVATE siliconforge_lib)
add_test(NAME Phase33Tests COMMAND test_phase33)

add_executable(test_phase34 test_phase34.cpp)
target_link_libraries(test_phase34 PRIVATE siliconforge_lib)
add_test(NAME Phase34Tests COMMAND test_phase34)

add_executable(test_phase35 test_phase35.cpp)
target_link_libraries(test_phase35 PRIVATE siliconforge_lib)
add_test(NAME Phase35Tests COMMAND test_phase35)

add_executable(test_phase36 test_phase36.cpp)
target_link_libraries(test_phase36 PRIVATE siliconforge_lib)
add_test(NAME Phase36Tests COMMAND test_phase36)

add_executable(test_phase37 test_phase37.cpp)
target_link_libraries(test_phase37 PRIVATE siliconforge_lib)
add_test(NAME Phase37Tests COMMAND test_phase37)

add_executable(test_phase38 test_phase38.cpp)
target_link_libraries(test_phase38 PRIVATE siliconforge_lib)
add_test(NAME Phase38Tests COMMAND test_phase38)

add_executable(test_phase39 test_phase39.cpp)
target_link_libraries(test_phase39 PRIVATE siliconforge_lib)
add_test(NAME Phase39Tests COMMAND test_phase39)
