add_executable(test_phase1 test_phase1.cpp)
target_link_libraries(test_phase1 PRIVATE siliconforge_lib)
add_test(NAME Phase1Tests COMMAND test_phase1)

add_executable(test_phase2 test_phase2.cpp)
target_link_libraries(test_phase2 PRIVATE siliconforge_lib)
add_test(NAME Phase2Tests COMMAND test_phase2)

add_executable(test_phase3 test_phase3.cpp)
target_link_libraries(test_phase3 PRIVATE siliconforge_lib)
add_test(NAME Phase3Tests COMMAND test_phase3)

add_executable(test_phase4 test_phase4.cpp)
target_link_libraries(test_phase4 PRIVATE siliconforge_lib)
add_test(NAME Phase4Tests COMMAND test_phase4)

add_executable(test_phase5 test_phase5.cpp)
target_link_libraries(test_phase5 PRIVATE siliconforge_lib)
add_test(NAME Phase5Tests COMMAND test_phase5)

add_executable(test_phase6 test_phase6.cpp)
target_link_libraries(test_phase6 PRIVATE siliconforge_lib)
add_test(NAME Phase6Tests COMMAND test_phase6)

add_executable(test_phase7 test_phase7.cpp)
target_link_libraries(test_phase7 PRIVATE siliconforge_lib)
add_test(NAME Phase7Tests COMMAND test_phase7)

add_executable(test_phase8 test_phase8.cpp)
target_link_libraries(test_phase8 PRIVATE siliconforge_lib)
add_test(NAME Phase8Tests COMMAND test_phase8)

add_executable(test_phase9 test_phase9.cpp)
target_link_libraries(test_phase9 PRIVATE siliconforge_lib)
add_test(NAME Phase9Tests COMMAND test_phase9)

add_executable(test_phase10 test_phase10.cpp)
target_link_libraries(test_phase10 PRIVATE siliconforge_lib)
add_test(NAME Phase10Tests COMMAND test_phase10)

add_executable(test_phase11 test_phase11.cpp)
target_link_libraries(test_phase11 PRIVATE siliconforge_lib)
add_test(NAME Phase11Tests COMMAND test_phase11)

add_executable(test_phase12 test_phase12.cpp)
target_link_libraries(test_phase12 PRIVATE siliconforge_lib)
add_test(NAME Phase12Tests COMMAND test_phase12)

add_executable(test_phase13 test_phase13.cpp)
target_link_libraries(test_phase13 PRIVATE siliconforge_lib)
add_test(NAME Phase13Tests COMMAND test_phase13)

add_executable(test_phase14 test_phase14.cpp)
target_link_libraries(test_phase14 PRIVATE siliconforge_lib)
add_test(NAME Phase14Tests COMMAND test_phase14)

add_executable(test_phase15 test_phase15.cpp)
target_link_libraries(test_phase15 PRIVATE siliconforge_lib)
add_test(NAME Phase15Tests COMMAND test_phase15)

add_executable(test_phase16 test_phase16.cpp)
target_link_libraries(test_phase16 PRIVATE siliconforge_lib)
add_test(NAME Phase16Tests COMMAND test_phase16)

add_executable(test_phase17 test_phase17.cpp)
target_link_libraries(test_phase17 PRIVATE siliconforge_lib)
add_test(NAME Phase17Tests COMMAND test_phase17)

add_executable(test_phase18 test_phase18.cpp)
target_link_libraries(test_phase18 PRIVATE siliconforge_lib)
add_test(NAME Phase18Tests COMMAND test_phase18)

add_executable(test_phase19 test_phase19.cpp)
target_link_libraries(test_phase19 PRIVATE siliconforge_lib)
add_test(NAME Phase19Tests COMMAND test_phase19)

add_executable(test_phase20 test_phase20.cpp)
target_link_libraries(test_phase20 PRIVATE siliconforge_lib)
add_test(NAME Phase20Tests COMMAND test_phase20)

add_executable(test_phase21 test_phase21.cpp)
target_link_libraries(test_phase21 PRIVATE siliconforge_lib)
add_test(NAME Phase21Tests COMMAND test_phase21)

add_executable(test_phase22 test_phase22.cpp)
target_link_libraries(test_phase22 PRIVATE siliconforge_lib)
add_test(NAME Phase22Tests COMMAND test_phase22)

add_executable(test_phase23 test_phase23.cpp)
target_link_libraries(test_phase23 PRIVATE siliconforge_lib)
add_test(NAME Phase23Tests COMMAND test_phase23)

add_executable(test_phase24 test_phase24.cpp)
target_link_libraries(test_phase24 PRIVATE siliconforge_lib)
add_test(NAME Phase24Tests COMMAND test_phase24)

add_executable(test_phase25 test_phase25.cpp)
target_link_libraries(test_phase25 PRIVATE siliconforge_lib)
add_test(NAME Phase25Tests COMMAND test_phase25)

add_executable(test_phase26 test_phase26.cpp)
target_link_libraries(test_phase26 PRIVATE siliconforge_lib)
add_test(NAME Phase26Tests COMMAND test_phase26)

add_executable(test_phase27 test_phase27.cpp)
target_link_libraries(test_phase27 PRIVATE siliconforge_lib)
add_test(NAME Phase27Tests COMMAND test_phase27)

add_executable(test_phase28 test_phase28.cpp)
target_link_libraries(test_phase28 PRIVATE siliconforge_lib)
add_test(NAME Phase28Tests COMMAND test_phase28)

add_executable(test_phase29 test_phase29.cpp)
target_link_libraries(test_phase29 PRIVATE siliconforge_lib)
add_test(NAME Phase29Tests COMMAND test_phase29)

add_executable(test_phase30 test_phase30.cpp)
target_link_libraries(test_phase30 PRIVATE siliconforge_lib)
add_test(NAME Phase30Tests COMMAND test_phase30)

add_executable(test_phase31 test_phase31.cpp)
target_link_libraries(test_phase31 PRIVATE siliconforge_lib)
add_test(NAME Phase31Tests COMMAND test_phase31)

add_executable(test_phase32 test_phase32.cpp)
target_link_libraries(test_phase32 PRIVATE siliconforge_lib)
add_test(NAME Phase32Tests COMMAND test_phase32)

add_executable(test_phase33 test_phase33.cpp)
target_link_libraries(test_phase33 PRIVATE siliconforge_lib)
add_test(NAME Phase33Tests COMMAND test_phase33)

add_executable(test_phase34 test_phase34.cpp)
target_link_libraries(test_phase34 PRIVATE siliconforge_lib)
add_test(NAME Phase34Tests COMMAND test_phase34)

add_executable(test_phase35 test_phase35.cpp)
target_link_libraries(test_phase35 PRIVATE siliconforge_lib)
add_test(NAME Phase35Tests COMMAND test_phase35)

add_executable(test_phase36 test_phase36.cpp)
target_link_libraries(test_phase36 PRIVATE siliconforge_lib)
add_test(NAME Phase36Tests COMMAND test_phase36)

add_executable(test_phase37 test_phase37.cpp)
target_link_libraries(test_phase37 PRIVATE siliconforge_lib)
add_test(NAME Phase37Tests COMMAND test_phase37)

add_executable(test_phase38 test_phase38.cpp)
target_link_libraries(test_phase38 PRIVATE siliconforge_lib)
add_test(NAME Phase38Tests COMMAND test_phase38)

add_executable(test_phase39 test_phase39.cpp)
target_link_libraries(test_phase39 PRIVATE siliconforge_lib)
add_test(NAME Phase39Tests COMMAND test_phase39)

add_executable(test_phase40 test_phase40.cpp)
target_link_libraries(test_phase40 PRIVATE siliconforge_lib)
add_test(NAME Phase40Tests COMMAND test_phase40)

add_executable(test_phase41 test_phase41.cpp)
target_link_libraries(test_phase41 PRIVATE siliconforge_lib)
add_test(NAME Phase41Tests COMMAND test_phase41)

add_executable(test_phase42 test_phase42.cpp)
target_link_libraries(test_phase42 PRIVATE siliconforge_lib)
add_test(NAME Phase42Tests COMMAND test_phase42)

add_executable(test_phase43 test_phase43.cpp)
target_link_libraries(test_phase43 PRIVATE siliconforge_lib)
add_test(NAME Phase43Tests COMMAND test_phase43)

add_executable(test_phase44 test_phase44.cpp)
target_link_libraries(test_phase44 PRIVATE siliconforge_lib)
add_test(NAME Phase44Tests COMMAND test_phase44)

add_executable(test_phase45 test_phase45.cpp)
target_link_libraries(test_phase45 PRIVATE siliconforge_lib)
add_test(NAME Phase45Tests COMMAND test_phase45)

add_executable(test_phase46 test_phase46.cpp)
target_link_libraries(test_phase46 PRIVATE siliconforge_lib)
add_test(NAME Phase46Tests COMMAND test_phase46)

add_executable(test_phase47 test_phase47.cpp)
target_link_libraries(test_phase47 PRIVATE siliconforge_lib)
add_test(NAME Phase47Tests COMMAND test_phase47)

add_executable(test_phase48 test_phase48.cpp)
target_link_libraries(test_phase48 PRIVATE siliconforge_lib)
add_test(NAME Phase48Tests COMMAND test_phase48)

add_executable(test_phase49 test_phase49.cpp)
target_link_libraries(test_phase49 PRIVATE siliconforge_lib)
add_test(NAME Phase49Tests COMMAND test_phase49)

add_executable(test_phase50 test_phase50.cpp)
target_link_libraries(test_phase50 PRIVATE siliconforge_lib)
add_test(NAME Phase50Tests COMMAND test_phase50)

add_executable(test_phase51 test_phase51.cpp)
target_link_libraries(test_phase51 PRIVATE siliconforge_lib)
add_test(NAME Phase51Tests COMMAND test_phase51)

add_executable(test_phase52 test_phase52.cpp)
target_link_libraries(test_phase52 PRIVATE siliconforge_lib)
add_test(NAME Phase52Tests COMMAND test_phase52)

add_executable(test_phase53 test_phase53.cpp)
target_link_libraries(test_phase53 PRIVATE siliconforge_lib)
add_test(NAME Phase53Tests COMMAND test_phase53)

add_executable(test_phase54 test_phase54.cpp)
target_link_libraries(test_phase54 PRIVATE siliconforge_lib)
add_test(NAME Phase54Tests COMMAND test_phase54)

add_executable(test_phase55 test_phase55.cpp)
target_link_libraries(test_phase55 PRIVATE siliconforge_lib)
add_test(NAME Phase55Tests COMMAND test_phase55)

add_executable(test_phase56 test_phase56.cpp)
target_link_libraries(test_phase56 PRIVATE siliconforge_lib)
add_test(NAME Phase56Tests COMMAND test_phase56)

add_executable(test_phase57 test_phase57.cpp)
target_link_libraries(test_phase57 PRIVATE siliconforge_lib)
add_test(NAME Phase57Tests COMMAND test_phase57)

add_executable(test_phase58 test_phase58.cpp)
target_link_libraries(test_phase58 PRIVATE siliconforge_lib)
add_test(NAME Phase58Tests COMMAND test_phase58)

add_executable(test_phase59 test_phase59.cpp)
target_link_libraries(test_phase59 PRIVATE siliconforge_lib)
add_test(NAME Phase59Tests COMMAND test_phase59)

add_executable(test_phase60 test_phase60.cpp)
target_link_libraries(test_phase60 PRIVATE siliconforge_lib)
add_test(NAME Phase60Tests COMMAND test_phase60)

add_executable(test_phase61 test_phase61.cpp)
target_link_libraries(test_phase61 PRIVATE siliconforge_lib)
add_test(NAME Phase61Tests COMMAND test_phase61)

add_executable(test_phase62 test_phase62.cpp)
target_link_libraries(test_phase62 PRIVATE siliconforge_lib)
add_test(NAME Phase62Tests COMMAND test_phase62)

add_executable(test_phase63 test_phase63.cpp)
target_link_libraries(test_phase63 PRIVATE siliconforge_lib)
add_test(NAME Phase63Tests COMMAND test_phase63)

add_executable(test_phase64 test_phase64.cpp)
target_link_libraries(test_phase64 PRIVATE siliconforge_lib)
add_test(NAME Phase64Tests COMMAND test_phase64)

add_executable(test_phase65 test_phase65.cpp)
target_link_libraries(test_phase65 PRIVATE siliconforge_lib)
add_test(NAME Phase65Tests COMMAND test_phase65)

add_executable(test_phase66 test_phase66.cpp)
target_link_libraries(test_phase66 PRIVATE siliconforge_lib)
add_test(NAME Phase66Tests COMMAND test_phase66)

add_executable(test_phase67 test_phase67.cpp)
target_link_libraries(test_phase67 PRIVATE siliconforge_lib)
add_test(NAME Phase67Tests COMMAND test_phase67)

add_executable(test_phase68 test_phase68.cpp)
target_link_libraries(test_phase68 PRIVATE siliconforge_lib)
add_test(NAME Phase68Tests COMMAND test_phase68)

add_executable(test_phase69 test_phase69.cpp)
target_link_libraries(test_phase69 PRIVATE siliconforge_lib)
add_test(NAME Phase69Tests COMMAND test_phase69)

add_executable(test_phase70 test_phase70.cpp)
target_link_libraries(test_phase70 PRIVATE siliconforge_lib)
add_test(NAME Phase70Tests COMMAND test_phase70)

add_executable(test_phase71 test_phase71.cpp)
target_link_libraries(test_phase71 PRIVATE siliconforge_lib)
add_test(NAME Phase71Tests COMMAND test_phase71)

add_executable(test_phase72 test_phase72.cpp)
target_link_libraries(test_phase72 PRIVATE siliconforge_lib)
add_test(NAME Phase72Tests COMMAND test_phase72)

add_executable(test_phase73 test_phase73.cpp)
target_link_libraries(test_phase73 PRIVATE siliconforge_lib)
add_test(NAME Phase73Tests COMMAND test_phase73)

add_executable(test_phase74 test_phase74.cpp)
target_link_libraries(test_phase74 PRIVATE siliconforge_lib)
add_test(NAME Phase74Tests COMMAND test_phase74)

add_executable(test_phase75 test_phase75.cpp)
target_link_libraries(test_phase75 PRIVATE siliconforge_lib)
add_test(NAME Phase75Tests COMMAND test_phase75)

add_executable(test_phase76 test_phase76.cpp)
target_link_libraries(test_phase76 PRIVATE siliconforge_lib)
add_test(NAME Phase76Tests COMMAND test_phase76)

add_executable(test_phase77 test_phase77.cpp)
target_link_libraries(test_phase77 PRIVATE siliconforge_lib)
add_test(NAME Phase77Tests COMMAND test_phase77)

add_executable(test_phase78 test_phase78.cpp)
target_link_libraries(test_phase78 PRIVATE siliconforge_lib)
add_test(NAME Phase78Tests COMMAND test_phase78)

add_executable(test_phase79 test_phase79.cpp)
target_link_libraries(test_phase79 PRIVATE siliconforge_lib)
add_test(NAME Phase79Tests COMMAND test_phase79)

add_executable(test_phase80 test_phase80.cpp)
target_link_libraries(test_phase80 PRIVATE siliconforge_lib)
add_test(NAME Phase80Tests COMMAND test_phase80)

add_executable(test_phase81 test_phase81.cpp)
target_link_libraries(test_phase81 PRIVATE siliconforge_lib)
add_test(NAME Phase81Tests COMMAND test_phase81)

add_executable(test_phase82 test_phase82.cpp)
target_link_libraries(test_phase82 PRIVATE siliconforge_lib)
add_test(NAME Phase82Tests COMMAND test_phase82)

add_executable(test_phase83 test_phase83.cpp)
target_link_libraries(test_phase83 PRIVATE siliconforge_lib)
add_test(NAME Phase83Tests COMMAND test_phase83)

add_executable(test_phase84 test_phase84.cpp)
target_link_libraries(test_phase84 PRIVATE siliconforge_lib)
add_test(NAME Phase84Tests COMMAND test_phase84)
